--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1,4 +1,31 @@
 @import url("https://use.fontawesome.com/releases/v5.0.8/css/all.css");
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+img {
+  border: solid aqua;
+  border-radius: 50px 200px;
+}
+
+figcaption {
+  color: black;
+}
+
+body {
+  background-image: url("https://images.unsplash.com/photo-1519867850-74775a87e783?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fe3abae03356cce4cc02a0c8d27e4458&auto=format&fit=crop&w=967&q=80");
+  height: 100%;
+  margin: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 35px;
+  color: black;
+  font-family: sans-serif;
+}
+
 h1 {
   display: flex;
   justify-content: center;
@@ -7,17 +34,25 @@ h1 {
 ul {
   display: flex;
   justify-content: space-between;
+  padding: 10px;
+}
+
+ul1 {
+  font-size: 75px;
+  color: white;
 }
 
 li {
-  flex-direction: row;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 i {
   display: block;
-  font-size: 32px;
+  font-size: 100px;
   position: absolute;
   left: 50%;
-  bottom: 10%;
+  bottom: 20%;
 }
 /*# sourceMappingURL=style.css.map */
