--- a/game apr15/css/style.css
+++ b/game apr15/css/style.css
@@ -1,6 +1,7 @@
 header {
   display: flex;
   align-content: center;
+  font-size: 50px;
 }
 
 div.dice {
@@ -12,5 +13,14 @@ div.dice {
   font-size: 36px;
   text-align: center;
   margin: 15px;
+}
+
+button {
+  font-size: 20px;
+}
+
+p {
+  font-size: 25px;
+  background-color: chartreuse;
 }
 /*# sourceMappingURL=style.css.map */
