--- a/game apr15/css/style.css
+++ b/game apr15/css/style.css
@@ -23,4 +23,8 @@ p {
   font-size: 25px;
   background-color: chartreuse;
 }
+
+h3, h4 {
+  font-size: 20px;
+}
 /*# sourceMappingURL=style.css.map */
