--- a/game apr15/css/style.css
+++ b/game apr15/css/style.css
@@ -25,6 +25,13 @@ p {
 }
 
 h3, h4 {
-  font-size: 20px;
+  font-size: 30px;
+  background-color: red;
+  padding: 5px;
+  border-radius: 4px;
+}
+
+h2 {
+  margin: 5px;
 }
 /*# sourceMappingURL=style.css.map */
